@@ -42,7 +42,8 @@ public class PyStatResult extends PyTuple {
     public static final int n_sequence_fields = 10, n_fields = 10, n_unnamed_fields = 10;
 
     PyStatResult(PyObject... vals) {
-        super(TYPE, vals);
+        super(TYPE, new PyObject[] {vals[0], vals[1], vals[2], vals[3], vals[4], vals[5], vals[6],
+                vals[7].__int__(), vals[8].__int__(), vals[9].__int__()});
         st_mode = vals[0];
         st_ino = vals[1];
         st_dev = vals[2];
@@ -53,6 +54,20 @@ public class PyStatResult extends PyTuple {
         st_atime = vals[7];
         st_mtime = vals[8];
         st_ctime = vals[9];
+    }
+
+    protected PyStatResult(PyObject[] vals, PyObject st_atime, PyObject st_mtime, PyObject st_ctime) {
+        super(TYPE, vals);
+        st_mode = vals[0];
+        st_ino = vals[1];
+        st_dev = vals[2];
+        st_nlink = vals[3];
+        st_uid = vals[4];
+        st_gid = vals[5];
+        st_size = vals[6];
+        this.st_atime = st_atime;
+        this.st_mtime = st_mtime;
+        this.st_ctime = st_ctime;
     }
 
     @ExposedNew
@@ -67,7 +82,12 @@ public class PyStatResult extends PyTuple {
                 throw Py.TypeError(msg);
             }
             // tuples are immutable, so we can just use its underlying array
-            return new PyStatResult(((PyTuple)obj).getArray());
+            if (obj instanceof PyStatResult) {
+                return new PyStatResult(((PyTuple) obj).getArray());
+            } else {
+                return new PyStatResult(((PyTuple) obj).getArray(), ((PyStatResult) obj).st_atime,
+                        ((PyStatResult) obj).st_mtime, ((PyStatResult) obj).st_ctime);
+            }
         }
         else {
             PyList seq = new PyList(obj);
@@ -152,35 +172,6 @@ public class PyStatResult extends PyTuple {
                 Py.newFloat(fromFileTime(stat.creationTime())));
     }
 
-    // Override pyget, getslice to preserve backwards compatiblity that ints are returned for time elements
-    // if accessing by an index or slice
-
-    private final static int ST_ATIME = 7;
-    private final static int ST_MTIME = 8;
-    private final static int ST_CTIME = 9;
-
-    @Override
-    public PyObject pyget(int index) {
-        if (index == ST_ATIME || index == ST_MTIME || index == ST_CTIME) {
-            return super.pyget(index).__int__();
-        } else {
-            return super.pyget(index);
-        }
-    }
-
-    @Override
-    protected PyObject getslice(int start, int stop, int step) {
-        if (step > 0 && stop < start) {
-            stop = start;
-        }
-        int n = sliceLength(start, stop, step);
-        PyObject[] newArray = new PyObject[n];
-        for (int i = start, j = 0; j < n; i += step, j++) {
-            newArray[j] = pyget(i);
-        }
-        return new PyTuple(newArray, false);
-    }
-
     @Override
     public synchronized PyObject __eq__(PyObject o) {
         return stat_result___eq__(o);
@@ -232,7 +223,11 @@ public class PyStatResult extends PyTuple {
 
     @Override
     public PyTuple __getnewargs__() {
-        return new PyTuple(new PyList(getArray()));
+        PyList lst = new PyList(getArray());
+        lst.pyset(7, st_atime);
+        lst.pyset(8, st_mtime);
+        lst.pyset(9, st_ctime);
+        return new PyTuple(lst);
     }
 
     @Override
