@@ -4,6 +4,7 @@ For more details, please see https://hg.python.org/jython
 
 Jython 2.7.1rc1
   Bugs fixed
+    - [ 2549 ] test_posix fails on Linux
     - [ 2548 ] Unicode u'\N{name}' frequently broken, because ucnhash.dat outdated
     - [ 2527 ] cStringIO throws IllegalArgumentException with non-ASCII values
     - [ 2511 ] Percent operator calls __getattr__('__getitem__')
